2008-01-22  Alan McGovern <alan.mcgovern@gmail.com> 

	* Tracker/HTTPTracker.cs: Cosmetic

2008-01-22  Alan McGovern <alan.mcgovern@gmail.com> 

	

2008-01-12  Alan McGovern <alan.mcgovern@gmail.com> 

	* Tracker/TrackerConnectionId.cs: internal - public 
