@@ -48,11 +48,12 @@
       <Reference name="System.Web" />
       <Reference name="System.Xml" />
       <Files>
-        <Match path="BEncoding" pattern="*.cs" recurse="true"/>
-        <Match path="Client" pattern="*.cs" recurse="true"/>
-        <Match path="Common" pattern="*.cs" recurse="true"/>
-        <Match path="Tracker" pattern="*.cs" recurse="true"/>
-        <Match path="Collections" pattern="*.cs" recurse="true" /> 
+        <Match path="MonoTorrent.BEncoding" pattern="*.cs" recurse="true"/>
+        <Match path="MonoTorrent.Client" pattern="*.cs" recurse="true"/>
+        <Match path="MonoTorrent.Common" pattern="*.cs" recurse="true"/>
+        <Match path="MonoTorrent.Tracker" pattern="*.cs" recurse="true"/>
+        <Match path="MonoTorrent.TorrentWatchers" pattern="*.cs" recurse="true"/>
+        <Match path="MonoTorrent.Tracker" pattern="*.cs" recurse="true" /> 
       </Files>
     </Project>
     <Project name="SampleClient" path="SampleClient" language="C#" type="Exe" assemblyName="SampleClient" rootNamespace="SampleClient">
