@@ -1,0 +1,4 @@
+2008-02-01  Alan McGovern <alan.mcgovern@gmail.com> 
+
+	* AssemblyInfo.cs: UPdated prebuild file
+
